# pokedex-rs

./: .dockerignore  .env.local  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
src/: config.rs  error.rs  main.rs  pokemon.rs  translation.rs
