[package]
name = "pokedex-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["query"] }
reqwest = { version = "0.12.24", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
