[package]
name = "pokedex-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pokedex"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["query"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
