[package]
name = "pokedex-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pokedex"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-gzip", "cors", "timeout"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
